Fix alignment in cta

--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ button {
     gap:0;
     margin-right:100px ;
     align-items: left;
+    text-align: left;
 }
 
 .cta .main {
